`align-issue-labels` - Support PR rows in issue lists

--- a/source/features/align-issue-labels.css
+++ b/source/features/align-issue-labels.css
@@ -1,5 +1,6 @@
 html:not([rgh-OFF-align-issue-labels]) {
 	div[class^='IssueRow-module__row'],
+	div[class^='PullRequestRow-module__row'],
 	li[class*='PullsListItem']:not([class*='compact']) {
 		div[class^='Title-module__container'] {
 			display: contents;
